# firecore-pokedex-engine

./: Cargo.toml
src/: battle2.rs  battle_move.rs  context.rs  gui.rs  init.rs  itemstack.rs  lib.rs  serialize.rs  texture.rs
src/battle2/: script.rs
src/battle_move/: serialized.rs
src/gui/: bag.rs  health.rs  party.rs  pokemon.rs
src/gui/party/: cell.rs  mod.rs  select.rs  summary.rs
src/texture/: item.rs  trainer.rs
