[package]
name = "firecore-pokedex-engine"
version = "0.5.0-beta.2021-07-31"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
readme = "README.md"
publish = false

[features]
default = []
audio = ["firecore-engine/audio"]

[dependencies]

firecore-pokedex = { git = "https://github.com/DoNotDoughnut/firecore-pokedex" }
firecore-engine = { git = "https://github.com/DoNotDoughnut/firecore-engine", default-features = false }
hashbrown = { version = "0.11", features = ["serde"] }
tinystr = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
atomic = "0.5"
itoa = "0.4"