[package]
name = "firecore-pokedex-engine"
version = "0.5.0-beta.2021-08-16"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
readme = "README.md"
publish = false

[features]
default = ["audio"]
audio = ["firecore-engine/audio"]

[dependencies]
firecore-engine = { git = "https://github.com/DoNotDoughnut/firecore-engine", default-features = false }
firecore-pokedex = "0.0.4"
hashbrown = { version = "0.11", features = ["serde"] }
tinystr = { version = "0.4", features = ["serde"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"