[package]
name = "firecore-pokedex-engine"
description = "GUIs and other graphical things for firecore-pokedex"
version = "0.0.1" #"0.5.0-beta.2021-08-16"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"
repository = "https://github.com/fiirecore/pokedex-engine"
readme = "README.md"
license = "MIT"

[features]
default = ["audio"]
audio = ["firecore-engine/audio"]

[dependencies]
firecore-engine = { version = "0.0.1", default-features = false }
firecore-pokedex = "0.0.5"
hashbrown = { version = "0.11", features = ["serde"] }
tinystr = { version = "0.4", features = ["serde"], default-features = false }
serde = { version = "1", features = ["derive"] }
log = "0.4"